feat: implementacion profesional v2.1 con Express, Sequelize, JWT y Swagger
